# AndroidStudyNotesCode

./: app_config.gradle  build.gradle  gradle.properties  notesCode.jks  settings.gradle
app/: build.gradle
app/debug/: app-debug.apk  output.json
app/release/: app-release.apk  output.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.dex
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/proto/: helloword.proto
app/src/main/res/color/: tablayout_icon_color_list.xml
app/src/main/res/drawable/: bottom_nav.xml  (+6 more)
app/src/main/source/: app-release.apk  mylibrary-release.aar  test.apk
arouter_annotation/: build.gradle
arouter_annotation/src/main/: AndroidManifest.xml
arouter_annotation_java/: build.gradle
arouter_api/: build.gradle
arouter_api/src/main/: AndroidManifest.xml
arouter_api_java/: build.gradle
arouter_api_java/src/main/: AndroidManifest.xml
arouter_compiler/: build.gradle
arouter_compiler_java/: build.gradle
buildmodel/: build.gradle
buildmodel/src/main/: AndroidManifest.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
crash/: build.gradle
crash/src/main/: AndroidManifest.xml
crash/src/main/cpp/: CMakeLists.txt  ndk_crash.cpp
crash/src/main/cpp/breakpad/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
mylibrary/: build.gradle
mylibrary/src/main/: AndroidManifest.xml
network/: build.gradle
network/src/main/: AndroidManifest.xml
order/: build.gradle
order/src/main/: AndroidManifest.xml
skinlib/: build.gradle
skinlib/src/main/: AndroidManifest.xml
(+380 files in other folders)
